<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:orientation="vertical"
    tools:context=".QueryTransactionsActivity">

    <Button
        android:id="@+id/showTransactionDataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/GetTransactionDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showTransactionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/sumOfTransactionsTextView"
        app:layout_constraintStart_toStartOf="@+id/showTransactionDataBtn"
        app:layout_constraintTop_toBottomOf="@+id/showTransactionDataBtn" />

    <TextView
        android:id="@+id/sumOfTransactionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="Сумма транзакций: 00.00 Р"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dateFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/To"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/From"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateFromTextView" />

    <TextView
        android:id="@+id/dateToBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/dateToTextView"
        app:layout_constraintStart_toEndOf="@+id/dateFromTextView"
        app:layout_constraintTop_toTopOf="@+id/dateFromTextView" />

    <TextView
        android:id="@+id/dateFromBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateToTextView"
        app:layout_constraintTop_toTopOf="@+id/dateToTextView" />

    <Spinner
        android:id="@+id/FilterCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/showTransactionDataBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFromBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
